base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: doh-system
  labels:
    app.kubernetes.io/part-of: doh-smart-dns
    app.kubernetes.io/managed-by: kustomize
